--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,27 @@ body{
     
 }
 
-#survey-form label, #survey-form input{
+#survey-form label, #survey-form input[type=text], #survey-form input[type=email], #survey-form input[type=number], #survey-form select{
     width: 100%;
     display: block;
+}
+
+textarea{
+    width: 100%;
+    height: 100px;
+}
+
+#submit{
+    width: 100%;
+    background-color:pink;
+    height: 40px;
+    font-size: large;
+    font-weight:bold;
+    padding:8px;
+    margin-top: 20px;
+}
+
+#name, #email, #number{
+    margin-top: 8px;
+    margin-bottom: 15px;
 }
